--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,12 +16,15 @@
                 <% } %>
                 <li class="list-group-item">$<%= campground.price%>/night</li>
             </ul>
+            <!-- 현재 사용자와 campground 저자가 같으면 edit, delete 표시 -->
+            <% if (currentUser && campground.author.equals(currentUser._id)) { %>
             <div class="card-body">
                 <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
