--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -17,8 +17,12 @@
                     Looks good!
                 </div>
             </div>
-            <!-- multiple을 얺으면 파일 여러개를 업로드 가능 -->
-            <input type="file" name="image" id="" multiple>
+            <!-- multiple을 설정하면 파일 여러개를 업로드 가능 -->
+            <div class="input-group mb-3">
+                <input type="file" class="form-control" id="image" name="image" multiple>
+                <label class="input-group-text" for="image" >Upload</label>
+            </div>
+            <!-- <input type="file" name="image" id="" multiple> -->
             <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
                 <input class="form-control" type="text" id="image" name="campground[image]" required>
