--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -19,30 +19,39 @@
                     Looks good!
                 </div>
             </div>
-            <div class="input-group mb-3">
-                <input type="file" class="form-control" id="image" name="image" multiple>
-                <label class="input-group-text" for="image" >Add image</label>
-            </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
                     <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
-                        aria-describedby="price-label" name="campground[price]" value="<%=campground.price %>"
-                        required><div class="valid-feedback">
+                    aria-describedby="price-label" name="campground[price]" value="<%=campground.price %>"
+                    required><div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
             </div>
-
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" type="text" id="description" name="campground[description]"
-                    required><%= campground.description%></textarea>
+                required><%= campground.description%></textarea>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
+            <div class="input-group mb-3">
+                <input type="file" class="form-control" id="image" name="image" multiple>
+                <label class="input-group-text" for="image" >Add image</label>
+            </div>
+            <div class="mb-3">
+                <% campground.image.forEach((img, i) => { %>
+                    <img src="<%=img.url%>" class="img-thumbnail" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" name="deleteImages[]" id="image-<%= i %>" value="<%=img.filename%>">
+                    </div>
+                    <label for="image-<%=i%>">Delete?</label>
+                <% }) %>
+            </div>
+
             <div class="mb-3">
                 <button class="btn btn-info">Update Campground</button>
             </div>
