--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -44,7 +44,7 @@
             </div>
             <div class="mb-3">
                 <% campground.image.forEach((img, i) => { %>
-                    <img src="<%=img.url%>" class="img-thumbnail" alt="">
+                    <img src="<%=img.thumbnail%>" class="img-thumbnail" alt="">
                     <div class="form-check-inline">
                         <input type="checkbox" name="deleteImages[]" id="image-<%= i %>" value="<%=img.filename%>">
                     </div>
