--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,6 +4,8 @@
 
 <div class="row">
     <div class="col-6">
+        <div id='map' style='width: 400px; height: 300px;'></div>
+
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <% campground.image.forEach((img, i) => {  %> 
@@ -105,5 +107,13 @@
         </div>
         <% } %>
     </div>
-    
+
 </div>
+
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+    const campground = '<%-JSON.stringify(campground)%>'
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
+
