--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,9 +4,9 @@
 
 <div class="row">
     <div class="col-6">
-        <div id='map' style='width: 400px; height: 300px;'></div>
-
+        
         <div id="carouselExample" class="carousel slide">
+            <div id='map' style='width: 100%; height: 300px;'></div>
             <div class="carousel-inner">
                 <% campground.image.forEach((img, i) => {  %> 
                     <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
@@ -111,8 +111,9 @@
 </div>
 
 <script>
-    const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
-    const campground = '<%-JSON.stringify(campground)%>'
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campground = <%- JSON.stringify(campground) %>
+
 </script>
 
 <script src="/javascripts/showPageMap.js"></script>
